--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -31,3 +31,13 @@
 /VentanaAdmin$22.class
 /VentanaRegisA$1.class
 /VentanaRegisA.class
+/VentanaUsu$4.class
+/VentanaAdmin$1.class
+/VentanaAdmin$2.class
+/VentanaAdmin$3.class
+/VentanaAdmin$4.class
+/VentanaAdmin$5.class
+/VentanaAdmin$6.class
+/VentanaAdmin$7.class
+/VentanaAdmin$8.class
+/VentanaAdmin.class
